--- a/hospital-react-app/src/style.css
+++ b/hospital-react-app/src/style.css
@@ -72,7 +72,17 @@ nav li{
   cursor: pointer;
   color: #7CBEB5;
   border-radius: 5rem;
+  padding: 0.5rem 1rem;
+  font-weight: 700;
   border: 0.2rem solid #7CBEB5;
+  transition: all 0.3s ease-in-out;
+}
+
+.button-secondary:hover{
+  background-color: #E1F5F5;
+  color: #0B5755;
+  border-radius: 5rem;
+  border: 0.2rem solid #E1F5F5;
 }
 
 .background-green-gradient{
